--- a/mmayer.tex
+++ b/mmayer.tex
@@ -207,3 +207,73 @@
 
 
 \end{document}
+
+
+
+% \cvachievement{\faTrophy}{}{Received accolades at Atos for Best Performance in team.}
+% \cvachievement{\faTrophy}{}{Received Best Debut Award at Atos. }
+% %\divider
+% \cvachievement{\faInstitution}{}{Won 2nd Consolation Prize for paper presented on Cognitive Radio Networks.}
+% %\divider
+% \cvachievement{\faGraduationCap}{}{Got Selected in "Exclusive Scholar Program" during undergrad.}
+% %\divider
+% \cvachievement{\faDollar}{}{Awarded with Narotam Sekhsaria Foundation Scholarship}
+%\cvsection{Strengths}
+
+%\cvtag{Hard-working (18/24)}
+%\cvtag{Persuasive}
+%\cvtag{Motivator \& Leader}
+
+%\divider\smallskip
+
+%\cvtag{UX}
+%\cvtag{Mobile Devices \& Applications}
+%\cvtag{Product Management \& Marketing}
+
+
+%\divider
+
+%\cvevent{B.S.\ in Symbolic Systems}{Stanford University}{Sept 1993 -- June 1997}{}
+
+\cvsection{Projects}
+\cvproject{Masked Face Detection for ATM}
+\begin{itemize}
+\item Developed a head classifier to detect masked faces in ATM to potentially prevent the event of robbery.
+\item Different camera angle, position, image quality, illumination and type of occlusion were the major challenges. Improved the existing accuracy by 20\%.
+\end{itemize}
+\smallskip
+\cvproject{Person Tracking}
+\begin{itemize}
+\item Developed, modified and implemented robust object tracker by combining motion and appearance information to learn deep association metrics.
+\end{itemize}
+\smallskip
+\cvproject{One Shot Learning}
+\begin{itemize}
+\item One shot learning is the promising approach to learn good feature when little data is available.
+\item Achieved 92\% accuracy on omniglot dataset using Siamese network with Bayesian optimization.
+\end{itemize}
+\smallskip
+\cvproject{Automatic Defect Inspection of solar farm using drones}
+\begin{itemize}
+\item Regular inspection of solar farm due to its wide size is strenuous.
+\item Developed a model to classify and localize defect on thermal images captured by drones.
+\end{itemize}
+\smallskip
+\cvproject{Anomaly detection using Auto-Encoders}
+\begin{itemize}
+\item Developed a model to learn regular patterns from sensor data and detect unusual pattern.
+\end{itemize}
+\smallskip
+\cvproject{Early Warning Fault Detection and Identification}
+\begin{itemize}
+\item Developed an LSTM based model to forecast and detect outlier from sensor data.
+\item Further, classified the given signal into one of the type of outlier.
+\end{itemize}
+\smallskip
+\cvproject{Sentiment Analysis}
+\begin{itemize}
+    \item Used bag-of-words, pre-trained Embedding and simple as well as bi-directional LSTM techniques for Sentiment Analysis.
+\end{itemize}
+\cvproject{}
+
+\cvsection{OTHER EXPERIENCEEEE}
