--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -26,44 +26,47 @@
 %\cvevent{B.S.\ in Symbolic Systems}{Stanford University}{Sept 1993 -- June 1997}{}
 
 \cvsection{Projects}
-\cvproject{Masked Face Detection for ATM}
+\cvproject{Ethereum Project}{Spring, 2019}
 \begin{itemize}
-\item Developed a head classifier to detect masked faces in ATM to potentially prevent the event of robbery.
-\item Different camera angle, position, image quality, illumination and type of occlusion were the major challenges. Improved the existing accuracy by 20\%.
+\item Utilized R to analyze the data of several tokens of Blockchain.
+\item Determined the best fit distribution to the number of buys
+and sells that a user makes.
+\item Created layers of transactions of increasing amounts and then find the correlation between these layers and different features in the data.
+\item Created a linear regression model to see if we can model price return based off of block chain features and purchase patterns.
+\item Wrote a detailed report providing good visuals to explain each step in the solution.
 \end{itemize}
 \smallskip
-\cvproject{Person Tracking}
+\cvproject{Person Tracking}{Summer, 2017}
 \begin{itemize}
 \item Developed, modified and implemented robust object tracker by combining motion and appearance information to learn deep association metrics.
 \end{itemize}
 \smallskip
-\cvproject{One Shot Learning}
+\cvproject{One Shot Learning}{Summer, 2017}
 \begin{itemize}
 \item One shot learning is the promising approach to learn good feature when little data is available.
 \item Achieved 92\% accuracy on omniglot dataset using Siamese network with Bayesian optimization.
 \end{itemize}
 \smallskip
-\cvproject{Automatic Defect Inspection of solar farm using drones}
+\cvproject{Automatic Defect Inspection of solar farm using drones}{Summer, 2017}
 \begin{itemize}
 \item Regular inspection of solar farm due to its wide size is strenuous.
 \item Developed a model to classify and localize defect on thermal images captured by drones.
 \end{itemize}
 \smallskip
-\cvproject{Anomaly detection using Auto-Encoders}
+\cvproject{Anomaly detection using Auto-Encoders}{Summer, 2017}
 \begin{itemize}
 \item Developed a model to learn regular patterns from sensor data and detect unusual pattern.
 \end{itemize}
 \smallskip
-\cvproject{Early Warning Fault Detection and Identification}
+\cvproject{Early Warning Fault Detection and Identification}{Summer, 2017}
 \begin{itemize}
 \item Developed an LSTM based model to forecast and detect outlier from sensor data.
 \item Further, classified the given signal into one of the type of outlier.
 \end{itemize}
 \smallskip
-\cvproject{Sentiment Analysis}
+\cvproject{Sentiment Analysis}{Summer, 2017}
 \begin{itemize}
     \item Used bag-of-words, pre-trained Embedding and simple as well as bi-directional LSTM techniques for Sentiment Analysis.
 \end{itemize}
-\cvproject{}
 
-\cvsection{OTHER EXPERIENCE}
+\cvsection{ACTIVITIES}
