--- a/mmayer.tex
+++ b/mmayer.tex
@@ -139,7 +139,7 @@
     \smallskip
     \item App Development: Android Development, Windows Form
     \smallskip
-    \item Network: TCP/IP protocol, http/https
+    \item Familiarity with Sockets,TCP/IP, VPNs, https/http
     \smallskip
     \item Computer Skills: Word, PPT
     \smallskip
