--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -28,45 +28,39 @@
 \cvsection{Projects}
 \cvproject{Ethereum Project}{Spring, 2019}
 \begin{itemize}
-\item Utilized R to analyze the data of several tokens of Blockchain.
+\item Utilized R to analyze the Blockchain data.
 \item Determined the best fit distribution to the number of buys
 and sells that a user makes.
-\item Created layers of transactions of increasing amounts and then find the correlation between these layers and different features in the data.
-\item Created a linear regression model to see if we can model price return based off of block chain features and purchase patterns.
+\item Developed a regression model related to frequency of buys or sells and price.
 \item Wrote a detailed report providing good visuals to explain each step in the solution.
 \end{itemize}
 \smallskip
-\cvproject{Person Tracking}{Summer, 2017}
+\cvproject{Library Management System}{Spring, 2019}
 \begin{itemize}
-\item Developed, modified and implemented robust object tracker by combining motion and appearance information to learn deep association metrics.
+\item Maintained, Developed and Designed the library system site by using PHP, CSS, JavaScript and HTML programming to meet validation requirements.
+\item Implemented data cleaning and reorganization.
+\item Built a backend SQL database that interact with front-end.
 \end{itemize}
 \smallskip
-\cvproject{One Shot Learning}{Summer, 2017}
+\cvproject{Breakout Video Game}{Fall, 2018}
 \begin{itemize}
-\item One shot learning is the promising approach to learn good feature when little data is available.
-\item Achieved 92\% accuracy on omniglot dataset using Siamese network with Bayesian optimization.
+\item Built a classic Breakout game for Android.
+\item Created all objects by using Object Oriented Programming technique.
+\item Used SurfaceView and extended it to provide a dedicated drawing surface. Excuted drawing in the background thread.
+\item Implemented the function of saving and updating top 10 records.
 \end{itemize}
 \smallskip
-\cvproject{Automatic Defect Inspection of solar farm using drones}{Summer, 2017}
+\cvproject{Auction Website}{Spring, 2018}
 \begin{itemize}
-\item Regular inspection of solar farm due to its wide size is strenuous.
-\item Developed a model to classify and localize defect on thermal images captured by drones.
+\item An auction site that implements real-time bidding, individual user management, and merchandise display functions using Java Web technology.
+\item Utilzed MVC architecture, responsible for the Controller part.
+\item Interacted with the database to submit data and extract data using DBManager. Used Servlet to process and respond to requests from the View.
 \end{itemize}
 \smallskip
-\cvproject{Anomaly detection using Auto-Encoders}{Summer, 2017}
-\begin{itemize}
-\item Developed a model to learn regular patterns from sensor data and detect unusual pattern.
-\end{itemize}
-\smallskip
-\cvproject{Early Warning Fault Detection and Identification}{Summer, 2017}
-\begin{itemize}
-\item Developed an LSTM based model to forecast and detect outlier from sensor data.
-\item Further, classified the given signal into one of the type of outlier.
-\end{itemize}
-\smallskip
-\cvproject{Sentiment Analysis}{Summer, 2017}
-\begin{itemize}
-    \item Used bag-of-words, pre-trained Embedding and simple as well as bi-directional LSTM techniques for Sentiment Analysis.
-\end{itemize}
+
 
 \cvsection{ACTIVITIES}
+\cvproject{FACSS-UTD(China Association)}{Fall, 2016 - Summer, 2018}
+\begin{itemize}
+  \item Assisted in the planning and execution of annual events of Chinese Festivals.
+\end{itemize}
