--- a/mmayer.tex
+++ b/mmayer.tex
@@ -90,15 +90,21 @@
 %% You can always just use \marginpar{...} if you do
 %% not need to align the top of the contents to any
 %% \cvsection title in the "main" bar.
-\cvsection[page1sidebar]{INTERNSHIP}
+\cvsection[page1sidebar]{Experience}
 
-\cvevent{Android Developer}{IQIYI.com Inc}{Summer, 2017}{Beijing, China}
+\cvevent{Android Development Internship}{IQIYI, Inc.}{Summer, 2017}{Beijing, China}
 \begin{itemize}
-\item Researched on daemon process and wrote a demonstration to prevent the program from being shut down.
+  \item Worked as an intern in the Intelligent equipment division department during summer months.
+  \item Completed and analyzed daemon process research to prevent application to be shut down. Provided a detailed report and presented to the team.
+  \item Assisted in UI designing and developing.
+  \item Tested functions of client software on 10 different brands of TV boxes.
+\end{itemize}
 \smallskip
-\item Wrote a demonstration to marquee effect.
-\smallskip
-\item Tested functions of video platform basing on different TV boxes.
+\cvevent{Big Idea Competition}{Institute for Innovation and Entrepreneurship}{Spring, 2018}{UTDallas}
+\begin{itemize}
+  \item Worked with team members on blockchain technology sloving problems faced by automotive industry.
+  \item Completed a business plan and a 40-page blockchain white paper detailing current pain points, technical resolutions and futures.
+  \item Presented to mentors and other competitors.
 \end{itemize}
 
 \divider
@@ -121,22 +127,22 @@
 \divider
 
 
-\cvsection{RELATIVE COURSES}
-\smallskip
-\begin{description}
-  \item[$\bullet$] Statistical for Data Science \hspace{0.64cm} {$\bullet$}\hspace{0.1cm}Database Design
-  \item[$\bullet$] Human Computer Interaction \hspace{0.2cm} {$\bullet$}\hspace{0.1cm} Machine Learning
-  \item[$\bullet$] Web Programming Languages \hspace{0.155cm} {$\bullet$}\hspace{0.1cm} Network Security
-\end{description}
+%\cvsection{RELATIVE COURSES}
+%\smallskip
+%\begin{description}
+%  \item[$\bullet$] Statistical for Data Science \hspace{0.64cm} {$\bullet$}\hspace{0.1cm}Database Design
+%  \item[$\bullet$] Human Computer Interaction \hspace{0.2cm} {$\bullet$}\hspace{0.1cm} Machine Learning
+%  \item[$\bullet$] Web Programming Languages \hspace{0.155cm} {$\bullet$}\hspace{0.1cm} Network Security
+%\end{description}
 
 \cvsection{PROGRAMMING SKILLS}
 \begin{itemize}
-    \item Languages: Java, C++, Python, SQL
+    \item Languages: Java, C++, Python, SQL, Latex
     \smallskip
     \item Web Development: HTML/CSS/Javascript, Java Web
     \smallskip
-    \item Data Science: R
-    \smallskip
+    %\item Data Science: R
+    %\smallskip
     \item App Development: Android Development, Windows Form
     \smallskip
     \item Familiarity with Sockets,TCP/IP, VPNs, https/http
@@ -149,7 +155,7 @@
 \cvsection{LANGUAGES}
 \smallskip
 \begin{description}
-  \item[$\bullet$] English \hspace{0.64cm} {$\bullet$}\hspace{0.1cm} Mandarin
+  \item[$\bullet$] English \hspace{0.64cm} {$\bullet$}\hspace{0.1cm} Mandarin \hspace{0.64cm} {$\bullet$}\hspace{0.1cm}Learning Cantonese
 \end{description}
 %\cvskill{C++, Python, Keras, Unix}{5}
 %\divider
